# SpikingNN_Rust

./: .gitignore  Cargo.toml  README.md  Slideshow.pptx
demo/: Cargo.toml
demo/src/: main.rs
src/: lib.rs  main.rs  matrix.rs  sync.rs
src/nn/: builder.rs  layer.rs  mod.rs  neuron.rs  solver_v1.rs  tests.rs
src/nn/model/: lif.rs  mod.rs
src/sync/: mod.rs  programmable_barrier.rs
src/sync_per_neuron/: programmable_barrier.rs
tests/: tests.rs
