[package]
name = "pds_spiking_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ndarray = "0.15.4"
tokio = { version = "1.20.1", features = ["rt", "sync"], optional = true }
packed_simd = { version = "0.3.8", package = "packed_simd_2", optional = true }

[dev-dependencies]
rand = "0.8.5"
rand_pcg = "0.3.1"
tokio = { version = "1.20.1", features = ["rt", "sync", "rt-multi-thread", "macros"] }

[features]
default = []
bench = []
async = ["dep:tokio"]
simd = ["dep:packed_simd"]
expose-test-solver = [] # Expose the test single threaded solver.
                        # This is just for showing off an important part of the project in the demo,
                        # it's not meant for general use.

[profile.bench]
codegen-units = 1
