[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pds_spiking_nn = { path = "..", features = ["expose-test-solver"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
async = ["pds_spiking_nn/async", "dep:tokio"]
simd = ["pds_spiking_nn/simd"]
